[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.22.0"
wasm-bindgen = "0.2.76"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
anyhow = "1.0.45"
yew_router = "0.17.0"
common = {version = "0.1.0", path = "../common" }

